--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
     <div>
         <h1>Welcome!</h1>
-        <h2>Passwood Generator</h2>
+        <h2>Password Generator</h2>
     </div>
     </header>  
     
@@ -22,7 +22,7 @@
                 <input type="text" id=display>
                 <br />
                 <button id="generateBtn">Generate</button>
-                <button onclick="">Copy</button>
+                <button id="copyBtn">Copy</button>
                 <div id= "length"></div>
             </div>
             <div class="already_used">
